--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -112,8 +112,8 @@ h6,
   border-color: #d4d4d4 !important;
 }
 .btn-secondary {
-  background-color: #bfcecb;
-  border-color: #bfcecb;
+  background-color: #ffffff;
+  border-color: #ffffff;
   color: #ffffff;
 }
 .btn-secondary:hover,
@@ -122,14 +122,14 @@ h6,
 .btn-secondary:active,
 .btn-secondary.active {
   color: #ffffff;
-  background-color: #94ada8;
-  border-color: #94ada8;
+  background-color: #d4d4d4;
+  border-color: #d4d4d4;
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
   color: #ffffff !important;
-  background-color: #94ada8 !important;
-  border-color: #94ada8 !important;
+  background-color: #d4d4d4 !important;
+  border-color: #d4d4d4 !important;
 }
 .btn-info {
   background-color: #90a878;
@@ -233,8 +233,8 @@ h6,
 }
 .btn-secondary-outline {
   background: none;
-  border-color: #85a29c;
-  color: #85a29c;
+  border-color: #ffffff;
+  color: #ffffff;
 }
 .btn-secondary-outline:hover,
 .btn-secondary-outline:focus,
@@ -242,14 +242,14 @@ h6,
 .btn-secondary-outline:active,
 .btn-secondary-outline.active {
   color: #ffffff;
-  background-color: #bfcecb;
-  border-color: #bfcecb;
+  background-color: #ffffff;
+  border-color: #ffffff;
 }
 .btn-secondary-outline.disabled,
 .btn-secondary-outline:disabled {
   color: #ffffff !important;
-  background-color: #bfcecb !important;
-  border-color: #bfcecb !important;
+  background-color: #ffffff !important;
+  border-color: #ffffff !important;
 }
 .btn-info-outline {
   background: none;
@@ -1065,4 +1065,80 @@ h6,
 }
 #testimonials1-17 .card-footer > div {
   color: #ffffff;
+}
+
+#ext_menu-20 .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-20 .navbar-caption {
+  color: #ffffff;
+}
+#ext_menu-20 .navbar-toggler {
+  color: #ffffff;
+}
+#ext_menu-20 .close-icon::before,
+#ext_menu-20 .close-icon::after {
+  background-color: #ffffff;
+}
+#ext_menu-20 .link,
+#ext_menu-20 .dropdown-item {
+  color: #ffffff;
+  font-family: 'Oswald', sans-serif;
+}
+#ext_menu-20 .link {
+  font-size: 0.75rem;
+}
+#ext_menu-20 .dropdown-item,
+#ext_menu-20 .nav-dropdown-sm .link {
+  font-size: 0.812rem;
+}
+#ext_menu-20 .link:hover,
+#ext_menu-20 .dropdown-item:hover,
+#ext_menu-20 .link:focus,
+#ext_menu-20 .dropdown-item:focus {
+  color: #ffffff;
+}
+#ext_menu-20 .link[aria-expanded="true"],
+#ext_menu-20 .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-20 .nav-dropdown-sm .link:focus,
+#ext_menu-20 .nav-dropdown-sm .link:hover,
+#ext_menu-20 .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-20 .nav-dropdown-sm .dropdown-item:hover {
+  background: #000000!important;
+}
+#ext_menu-20 .navbar,
+#ext_menu-20 .nav-dropdown-sm,
+#ext_menu-20 .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-20 .nav-dropdown-sm .dropdown-menu {
+  background: #000000;
+}
+#ext_menu-20 .bg-color.transparent .link {
+  color: #ffffff;
+  transition: none;
+}
+#ext_menu-20 .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-20 .bg-color.transparent.opened .link:hover,
+#ext_menu-20 .bg-color.transparent.opened .link:focus {
+  color: #ffffff;
+}
+#ext_menu-20 .link[aria-expanded="true"],
+#ext_menu-20 .dropdown-item[aria-expanded="true"] {
+  color: #ffffff!important;
+}
+#header3-22 .mbr-section-title,
+#header3-22 .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-22 H3 {
+  color: #ffffff;
+}
+#msg-box2-23 .mbr-section-title {
+  color: #fff;
+}
+#msg-box2-23 .mbr-section-subtitle {
+  color: #a0a0a0;
 }
