create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1070,11 +1070,11 @@ h6,
   color: #a0a0a0;
 }
 
-#header3-2x .mbr-section-title,
-#header3-2x .mbr-section-subtitle {
+#header3-3c .mbr-section-title,
+#header3-3c .mbr-section-subtitle {
   text-align: center;
 }
-#header3-2x H3 {
+#header3-3c H3 {
   color: #ffffff;
 }
 #content1-33 P {
