--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1077,10 +1077,7 @@ h6,
 #header3-3c H3 {
   color: #ffffff;
 }
-#content1-33 P {
-  color: #ffffff;
-}
-#content1-33 DIV {
+#msg-box5-3f P {
   color: #ffffff;
 }
 #ext_menu-2q .hide-buttons .nav-btn {
