create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -434,17 +434,12 @@ h6,
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
 }
-#header3-50 .mbr-section-title,
-#header3-50 .mbr-section-subtitle {
+#header3-5l .mbr-section-title,
+#header3-5l .mbr-section-subtitle {
   text-align: center;
 }
-#content8-4r .mbr-section-title,
-#content8-4r p {
-  text-align: right;
-  color: #fff;
-}
-#header3-51 .mbr-section-title,
-#header3-51 .mbr-section-subtitle {
+#header3-5n .mbr-section-title,
+#header3-5n .mbr-section-subtitle {
   text-align: center;
 }
 #header3-5b .mbr-section-title,
