create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -606,6 +606,9 @@ h6,
 #header3-5e H3 {
   color: #ffffff;
 }
+#slider3-5q H2 {
+  color: #ffffff;
+}
 #header3-53 .mbr-section-title,
 #header3-53 .mbr-section-subtitle {
   text-align: center;
