create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -806,6 +806,10 @@ h6,
 #msg-box8-68 .lead {
   color: #ffffff;
 }
+#msg-box8-69 .mbr-section-title,
+#msg-box8-69 p {
+  color: #fff;
+}
 #header3-65 .mbr-section-title,
 #header3-65 .mbr-section-subtitle {
   text-align: center;
