--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -777,38 +777,29 @@ h6,
 #header3-63 .mbr-section-subtitle {
   text-align: center;
 }
-#msg-box8-62 .mbr-section-title,
-#msg-box8-62 p {
-  color: #fff;
-}
-#msg-box8-64 .mbr-section-title,
-#msg-box8-64 p {
-  color: #fff;
-}
-#msg-box8-66 .mbr-section-title,
-#msg-box8-66 p {
-  color: #fff;
-}
-#msg-box8-66 .lead {
+#msg-box1-6b H3 {
   color: #ffffff;
+  text-align: center;
 }
-#msg-box8-67 .mbr-section-title,
-#msg-box8-67 p {
-  color: #fff;
-}
-#msg-box8-67 .lead {
+#msg-box1-6c H3 {
   color: #ffffff;
+  text-align: center;
 }
-#msg-box8-68 .mbr-section-title,
-#msg-box8-68 p {
-  color: #fff;
-}
-#msg-box8-68 .lead {
+#msg-box1-6d H3 {
   color: #ffffff;
+  text-align: center;
 }
-#msg-box8-69 .mbr-section-title,
-#msg-box8-69 p {
-  color: #fff;
+#msg-box1-6e H3 {
+  color: #ffffff;
+  text-align: center;
+}
+#msg-box1-6f H3 {
+  color: #ffffff;
+  text-align: center;
+}
+#msg-box1-6g H3 {
+  color: #ffffff;
+  text-align: center;
 }
 #header3-65 .mbr-section-title,
 #header3-65 .mbr-section-subtitle {
